--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,9 +36,9 @@
 					{% endfor %}
 				</div>
 				<p class="copyright">
-                    Copyright &copy; {{ site.time | date: '%Y' }} Music
-                    for Mind. All trademarks are property of their
-                    respective owners.
+                    Copyright &copy; {{ site.time | date: '%Y' }}
+                    Feeding Our Future. All trademarks are property of
+                    their respective owners.
                 </p>
 			</div>
 		</footer>
