--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,6 @@
-$brand-color: #1300c1;
-$secondary-brand-color: #ffcdd9;
+$brand-color: #ffffff;
+$secondary-brand-color: #78a826;
+$text-color: #000000;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
 // Breakpoints
