--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -47,7 +47,7 @@ h3 {
 
 p, address {
 	font-size: 1.38em;
-	color: #666;
+	color: $text-color;
 	margin-bottom: 20px;
 	font-weight: 300;
 	line-height: 1.4em;
