--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -1,6 +1,6 @@
 .bottom-cta {
 	background: linear-gradient(to bottom, $brand-color 0%, $middle-gradient-color 100%);
-	color: #fff;
+	color: $text-color;
 	text-align: center;
 	margin: 0;
 	padding: 100px 0;
@@ -32,14 +32,25 @@
 }
 
 .hero {
-	color: #ffffff;
+	color: #ffff;
 	text-align: center;
-	background: linear-gradient(to bottom, $middle-gradient-color 0%, $secondary-brand-color 100%) no-repeat #a05fb7;
-	padding-top: 50px;
+	// background: linear-gradient(to bottom, $middle-gradient-color 0%,
+	// $secondary-brand-color 100%) no-repeat #a05fb7;
+    background: linear-gradient(
+          rgba(0, 0, 0, 0.7), 
+          rgba(0, 0, 0, 0.7)
+        ), url("/images/background.jpeg") no-repeat center;
+    background-size: cover;
+    height: 90vh;
+	padding-top: 20vh;
 
 	p {
-		color: #fff;
+		color: #ffff;
 	}
+
+    .button a {
+        color: rgba(255,255,255,.8)
+    }
 }
 
 
