--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -18,13 +18,13 @@
 }
 
 header {
-	color: #fff;
+	color: $text-color;
 	padding: 20px 0;
 	background: $brand-color; /* Old browsers */
-	background: linear-gradient(to bottom, $brand-color 0%, $middle-gradient-color 100%) no-repeat $brand-color;
+	// background: linear-gradient(to bottom, $brand-color 0%, $middle-gradient-color 100%) no-repeat $brand-color;
 
 	a {
-		color: #fff;
+		color: $text-color;
 		text-decoration: none;
 		z-index: 1;
 		position: relative;
