--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -33,7 +33,7 @@ nav {
 		margin: 0 3px;
 		padding: 20px 10px;
 		border-bottom: 1px solid rgba(255,255,255,0);
-		color: rgba(255,255,255,.8);
+		color: rgba(0,0,0,.8);
 		transition: .2s ease-in-out;
 		display: none;
 
@@ -63,24 +63,24 @@ nav {
 
 	a:hover {
 
-		border-bottom: 1px solid rgba(255,255,255,.3);
-		color: #fff;
+		border-bottom: 1px solid $secondary-brand-color;
+		color: $text-color;
 	}
 
 	@media #{$mid-point} {
 		a.highlight {
-			border: 1px #ccc solid;
+			border: 1px $secondary-brand-color solid;
 			border-radius: 5px;
 
 			&:hover {
-				background: #fff;
+				background: $secondary-brand-color;
 				color: $brand-color;
 			}
 		}
 	}
 
 	a.active {
-		color: #fff;
+		color: $text-color;
 	}
 
 }
