--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -77,6 +77,13 @@
 			margin: 30px 0 0 0;
 		}
 	}
+
+    li{
+        font-size: 1.38em;
+        color: #000000;
+        font-weight: 300;
+        line-height: 1.4em;
+    }
 }
 
 .pagination {
